--- a/test/fqa.html
+++ b/test/fqa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
 
     <title>CashSwag - FQA</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon/logo.ico" />
 
     <!-- Иконка для сайта
 	<link rel="icon" type="image/png" sizes="48x48" href="./img/favicon/icon-48.png">
@@ -15,14 +16,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no" />
 
-    <link media="all" rel="stylesheet" type="text/css" href="./css/styles.min.css" />
+    <link media="all" rel="stylesheet" type="text/css" href="./assets/css/styles.min.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
       <div class="header__wrapper wrapper">
         <a href="./" class="header__logo logo">
-          <img src="./img/elements/logo.png" alt="CASH SWAG" />
+          <img src="./assets/img/elements/logo.png" alt="CASH SWAG" />
         </a>
         <button class="header__btn"><span></span><span></span><span></span></button>
         <ul class="header__nav">
@@ -134,7 +135,7 @@
           <div class="socialBtn__text">Telegram</div>
         </div>
         <div class="logo footer__logo">
-          <img src="./img/elements/logoFooter.png" alt="CASH SWAG" />
+          <img src="./assets/img/elements/logoFooter.png" alt="CASH SWAG" />
         </div>
         <ul class="footer__list">
           <li class="footer__item"><a href="./fqa.html" class="footer__link">FAQ</a></li>
@@ -144,7 +145,7 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="./js/swiper.min.js"></script>
-    <script type="text/javascript" src="./js/scripts.min.js"></script>
+    <script type="text/javascript" src="./assets/js/swiper.min.js"></script>
+    <script type="text/javascript" src="./assets/js/scripts.min.js"></script>
   </body>
 </html>
