--- a/test/index.html
+++ b/test/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
 
     <title>CashSwag</title>
-
+    <link rel="icon" type="image/x-icon"  href="./assets/img/favicon/logo.ico">
     <!-- Иконка для сайта
-	<link rel="icon" type="image/png" sizes="48x48" href="./img/favicon/icon-48.png">
-	<link rel="icon" type="image/png" sizes="144x144" href="./img/favicon/icon-144.png">
-	<link rel="icon" type="image/png" sizes="256x256" href="./img/favicon/icon-256.png">  -->
+	<link rel="icon" type="image/png" sizes="48x48" href="./assets/img/favicon/icon-48.png">
+	<link rel="icon" type="image/png" sizes="144x144" href="./assets/img/favicon/icon-144.png">
+	<link rel="icon" type="image/png" sizes="256x256" href="./assets/img/favicon/icon-256.png">  -->
 
     <meta name="description" content="Выводимое описании при выводе в поисковике вашего сайта" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no" />
 
-    <link media="all" rel="stylesheet" type="text/css" href="./css/styles.min.css" />
+    <link media="all" rel="stylesheet" type="text/css" href="./assets/css/styles.min.css" />
   </head>
   <body>
     <div class="body__bg">
@@ -42,7 +42,7 @@
     <header class="header">
       <div class="header__wrapper wrapper">
         <a href="./" class="header__logo logo">
-          <img src="./img/elements/logo.png" alt="CASH SWAG" />
+          <img src="./assets/img/elements/logo.png" alt="CASH SWAG" />
         </a>
         <button class="header__btn"><span></span><span></span><span></span></button>
         <ul class="header__nav">
@@ -102,8 +102,8 @@
       <div class="bgElemLight2"></div>
       <div class="head__wrapper wrapper">
         <div class="head__img">
-          <img class="desctop" src="./img/elements/bear1-1.png" alt="" />
-          <img class="mobile" src="./img/elements/bear1-2.png" alt="" />
+          <img class="desctop" src="./assets/img/elements/bear1-1.png" alt="" />
+          <img class="mobile" src="./assets/img/elements/bear1-2.png" alt="" />
         </div>
         <div class="head__cnt">
           <h2 class="head__name">CashSwag</h2>
@@ -141,7 +141,7 @@
           <div class="swiperWrapper">
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/1.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/1.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Офферы из разных направлений.
                   <span class="w600">Ты сможешь выбрать лучший</span> вариант для своего источника
@@ -150,7 +150,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/2.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/2.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Начисляем до<span class="w600"> 70% от суммы,</span> <br />
                   которую тратит пользователь
@@ -159,7 +159,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/3.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/3.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Принимаем трафик
                   <span class="w600">
@@ -172,7 +172,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/4.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/4.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Срок жизни клиента<span class="w600"> до 3 лет.</span> Всё это время ты будешь
                   <span class="w600">получать процент</span>
@@ -181,7 +181,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/5.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/5.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Для каждого продукта <br />
                   доступна <span class="w600">trial-версия</span>
@@ -190,7 +190,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/6.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/6.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Список офферов <span class="w600">регулярно обновляется</span>
                 </div>
@@ -213,8 +213,8 @@
       </div>
       <div class="partnership__wrapper wrapper">
         <div class="partnership__img">
-          <img class="desctop" src="./img/elements/bear deal1-1.png" alt="" />
-          <img class="mobile" src="./img/elements/bear deal1-2.png" alt="" />
+          <img class="desctop" src="./assets/img/elements/bear deal1-1.png" alt="" />
+          <img class="mobile" src="./assets/img/elements/bear deal1-2.png" alt="" />
         </div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">Партнерство, нацеленное на результат</h3>
@@ -258,7 +258,7 @@
           <div class="swiperWrapper">
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/7.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/7.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Офферы из разных направлений.
                   <span class="w600">Ты сможешь выбрать лучший</span> вариант для своего источника
@@ -267,7 +267,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/8.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/8.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Начисляем до<span class="w600"> 70% от суммы,</span> <br />
                   которую тратит пользователь
@@ -276,7 +276,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/9.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/9.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Принимаем трафик
                   <span class="w600">
@@ -291,8 +291,8 @@
         </div>
         <div class="swiper-pagination swiper-pagination2"></div>
         <div class="autor__img">
-          <img class="desctop" src="./img/elements/cool - bear 1-1.png" alt=""></img>
-          <img class="mobile" src="./img/elements/cool - bear 1-2.png" alt=""></img>
+          <img class="desctop" src="./assets/img/elements/cool - bear 1-1.png" alt=""></img>
+          <img class="mobile" src="./assets/img/elements/cool - bear 1-2.png" alt=""></img>
         </div>
         <p class="txt50x60">
           Монетизируй идеи с <span class="w900">Cashswag </span> и получай<span class="w900 cOr">
@@ -317,7 +317,7 @@
           <div class="swiperWrapper">
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/10.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/10.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Индивидуальные условия по офферам и выплатам
                 </div>
@@ -325,7 +325,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/11.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/11.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Быстрые выплаты от 50$
                 </div>
@@ -333,7 +333,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/12.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/12.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Гибкие воронки по запросу вебмастера
                 </div>
@@ -341,7 +341,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/13.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/13.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Холда нет
                 </div>
@@ -349,7 +349,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/14.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/14.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Регулярно обновляющийся список офферов под WW ГЕО 
                 </div>
@@ -357,7 +357,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/15.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/15.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Свой штат креативщиков, дизайнеров и копирайтеров
                 </div>
@@ -365,7 +365,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/16.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/16.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Поддержка менеджера 24/7
                 </div>
@@ -373,7 +373,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./img/01/12.png" alt="" /></div>
+                <div class="card__icon"><img src="./assets/img/01/12.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Реферальная программа для дополнительного заработка 
                 </div>
@@ -384,7 +384,7 @@
         <div class="swiper-pagination swiper-pagination3"></div>
       </div>
       <div class="profite__profit">
-        <img src="./img/elements/PROFIT!.png" alt="">
+        <img src="./assets/img/elements/PROFIT!.png" alt="">
       </div>
     </section>
     <section class="payments">
@@ -400,17 +400,17 @@
       </div>
       <div class="payments__wrapper wrapper">
         <div class="payments__item">
-          <div class="payments__icon"><img src="./img/payment/1.png" alt=""></div>
+          <div class="payments__icon"><img src="./assets/img/payment/1.png" alt=""></div>
           <p class="payments__name">Банковские карты
           </p>
         </div>
         <div class="payments__item">
-          <div class="payments__icon"><img src="./img/payment/2.png" alt=""></div>
+          <div class="payments__icon"><img src="./assets/img/payment/2.png" alt=""></div>
           <p class="payments__name">Банковские карты
           </p>
         </div>
         <div class="payments__item">
-          <div class="payments__icon"><img src="./img/payment/3.png" alt=""></div>
+          <div class="payments__icon"><img src="./assets/img/payment/3.png" alt=""></div>
           <p class="payments__name">Банковские карты
           </p>
         </div>
@@ -438,7 +438,7 @@
           <div class="socialBtn__text">Telegram</div>
         </div>
         <div class="logo footer__logo">
-          <img src="./img/elements/logoFooter.png" alt="CASH SWAG" />
+          <img src="./assets/img/elements/logoFooter.png" alt="CASH SWAG" />
         </div>
         <ul class="footer__list">
           <li class="footer__item"><a href="./fqa.html" class="footer__link">FAQ</a></li>
