--- a/test/index.html
+++ b/test/index.html
@@ -448,7 +448,7 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="./js/swiper.min.js"></script>
-    <script type="text/javascript" src="./js/scripts.min.js"></script>
+    <script type="text/javascript" src="./assets/js/swiper.min.js"></script>
+    <script type="text/javascript" src="./assets/js/scripts.min.js"></script>
   </body>
 </html>
