--- a/test/index.html
+++ b/test/index.html
@@ -125,14 +125,14 @@
       <div class="bgElemDark"></div>
       <div class="bgElemDark2"></div>
       <div class="typeTop">
-        <div class="typeTop__num">01</div>
+        <div class="typeTop__num"><img src="./assets/img/elements/text/01.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             <span class="cOr">Пожизненный доход</span>
             <span class="w600">для новичков и опытных арбитражников</span>
           </h3>
           <h6 class="typeTop__subTitle txt30x35">
-            Пользователь получает доступ к онлайн-продукту – ты зарабатываешь.
+            Пользователь получает доступ к онлайн-продукту<br> <span class="w700">– ты зарабатываешь.</span>
           </h6>
         </div>
       </div>
@@ -209,7 +209,7 @@
         <p class="modelPay__nn">CPA и RevShare (до 70%)</p>
       </div>
       <div class="typeTop typeTop--second">
-        <div class="typeTop__num">02</div>
+        <div class="typeTop__num"><img src="./assets/img/elements/text/02.png" alt=""></div>
       </div>
       <div class="partnership__wrapper wrapper">
         <div class="partnership__img">
@@ -238,7 +238,7 @@
       <div class="bgElemDark"></div>
       <div class="bgElemDark2"></div>
       <div class="typeTop">
-        <div class="typeTop__num">03</div>
+        <div class="typeTop__num"><img src="./assets/img/elements/text/03.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             АВТОРСКИЕ ОФФЕРЫ - помощь <br />
@@ -305,7 +305,7 @@
       <div class="bgElemLight"></div>
       <div class="bgElemLight2"></div>
       <div class="typeTop typeTop--second">
-        <div class="typeTop__num">04</div>
+        <div class="typeTop__num"><img src="./assets/img/elements/text/04.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             Всё, что нужно для твоего профита
@@ -384,14 +384,14 @@
         <div class="swiper-pagination swiper-pagination3"></div>
       </div>
       <div class="profite__profit">
-        <img src="./assets/img/elements/PROFIT!.png" alt="">
+        <img src="./assets/img/elements/text/profit.png" alt="">
       </div>
     </section>
     <section class="payments">
       <div class="bgElemDark"></div>
       <div class="bgElemDark2"></div>
       <div class="typeTop">
-        <div class="typeTop__num">05</div>
+        <div class="typeTop__num"><img src="./assets/img/elements/text/05.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             Выплаты на комфортные платежные системы
