--- a/test/index.html
+++ b/test/index.html
@@ -36,13 +36,14 @@
         <span></span>
         <span></span>
         <span></span>
+        <span></span>
       </div>
     </div>
     <!-- Header -->
     <header class="header">
       <div class="header__wrapper wrapper">
         <a href="./" class="header__logo logo">
-          <img src="./assets/img/elements/logo.png" alt="CASH SWAG" />
+          <img  loading="lazy" src="./assets/img/elements/logo.png" alt="CASH SWAG" />
         </a>
         <button class="header__btn"><span></span><span></span><span></span></button>
         <ul class="header__nav">
@@ -102,8 +103,8 @@
       <div class="bgElemLight2"></div>
       <div class="head__wrapper wrapper">
         <div class="head__img">
-          <img class="desctop" src="./assets/img/elements/bear1-1.png" alt="" />
-          <img class="mobile" src="./assets/img/elements/bear1-2.png" alt="" />
+          <img  loading="lazy" class="desctop" src="./assets/img/elements/bear1-1.png" alt="" />
+          <img  loading="lazy" class="mobile" src="./assets/img/elements/bear1-2.png" alt="" />
         </div>
         <div class="head__cnt">
           <h2 class="head__name">CashSwag</h2>
@@ -125,7 +126,7 @@
       <div class="bgElemDark"></div>
       <div class="bgElemDark2"></div>
       <div class="typeTop">
-        <div class="typeTop__num"><img src="./assets/img/elements/text/01.png" alt=""></div>
+        <div class="typeTop__num"><img  loading="lazy" src="./assets/img/elements/text/01.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             <span class="cOr">Пожизненный доход</span>
@@ -141,7 +142,7 @@
           <div class="swiperWrapper">
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/1.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/1.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Офферы из разных направлений.
                   <span class="w600">Ты сможешь выбрать лучший</span> вариант для своего источника
@@ -150,7 +151,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/2.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/2.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Начисляем до<span class="w600"> 70% от суммы,</span> <br />
                   которую тратит пользователь
@@ -159,7 +160,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/3.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/3.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Принимаем трафик
                   <span class="w600">
@@ -172,7 +173,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/4.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/4.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Срок жизни клиента<span class="w600"> до 3 лет.</span> Всё это время ты будешь
                   <span class="w600">получать процент</span>
@@ -181,7 +182,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/5.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/5.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Для каждого продукта <br />
                   доступна <span class="w600">trial-версия</span>
@@ -190,7 +191,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/6.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/6.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Список офферов <span class="w600">регулярно обновляется</span>
                 </div>
@@ -209,12 +210,12 @@
         <p class="modelPay__nn">CPA и RevShare (до 70%)</p>
       </div>
       <div class="typeTop typeTop--second">
-        <div class="typeTop__num"><img src="./assets/img/elements/text/02.png" alt=""></div>
+        <div class="typeTop__num"><img  loading="lazy" src="./assets/img/elements/text/02.png" alt=""></div>
       </div>
       <div class="partnership__wrapper wrapper">
         <div class="partnership__img">
-          <img class="desctop" src="./assets/img/elements/bear deal1-1.png" alt="" />
-          <img class="mobile" src="./assets/img/elements/bear deal1-2.png" alt="" />
+          <img  loading="lazy" class="desctop" src="./assets/img/elements/bear deal1-1.png" alt="" />
+          <img  loading="lazy" class="mobile" src="./assets/img/elements/bear deal1-2.png" alt="" />
         </div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">Партнерство, нацеленное на результат</h3>
@@ -238,7 +239,7 @@
       <div class="bgElemDark"></div>
       <div class="bgElemDark2"></div>
       <div class="typeTop">
-        <div class="typeTop__num"><img src="./assets/img/elements/text/03.png" alt=""></div>
+        <div class="typeTop__num"><img  loading="lazy" src="./assets/img/elements/text/03.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             АВТОРСКИЕ ОФФЕРЫ - помощь <br />
@@ -258,7 +259,7 @@
           <div class="swiperWrapper">
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/7.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/7.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Офферы из разных направлений.
                   <span class="w600">Ты сможешь выбрать лучший</span> вариант для своего источника
@@ -267,7 +268,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/8.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/8.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Начисляем до<span class="w600"> 70% от суммы,</span> <br />
                   которую тратит пользователь
@@ -276,7 +277,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/9.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/9.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Принимаем трафик
                   <span class="w600">
@@ -291,8 +292,8 @@
         </div>
         <div class="swiper-pagination swiper-pagination2"></div>
         <div class="autor__img">
-          <img class="desctop" src="./assets/img/elements/cool - bear 1-1.png" alt=""></img>
-          <img class="mobile" src="./assets/img/elements/cool - bear 1-2.png" alt=""></img>
+          <img  loading="lazy" class="desctop" src="./assets/img/elements/cool - bear 1-1.png" alt=""></img>
+          <img  loading="lazy" class="mobile" src="./assets/img/elements/cool - bear 1-2.png" alt=""></img>
         </div>
         <p class="txt50x60">
           Монетизируй идеи с <span class="w900">Cashswag </span> и получай<span class="w900 cOr">
@@ -305,7 +306,7 @@
       <div class="bgElemLight"></div>
       <div class="bgElemLight2"></div>
       <div class="typeTop typeTop--second">
-        <div class="typeTop__num"><img src="./assets/img/elements/text/04.png" alt=""></div>
+        <div class="typeTop__num"><img  loading="lazy" src="./assets/img/elements/text/04.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             Всё, что нужно для твоего профита
@@ -317,7 +318,7 @@
           <div class="swiperWrapper">
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/10.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/10.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Индивидуальные условия по офферам и выплатам
                 </div>
@@ -325,7 +326,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/11.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/11.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Быстрые выплаты от 50$
                 </div>
@@ -333,7 +334,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/12.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/17.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Гибкие воронки по запросу вебмастера
                 </div>
@@ -341,7 +342,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/13.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/12.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Холда нет
                 </div>
@@ -349,7 +350,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/14.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/13.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Регулярно обновляющийся список офферов под WW ГЕО 
                 </div>
@@ -357,7 +358,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/15.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/14.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Свой штат креативщиков, дизайнеров и копирайтеров
                 </div>
@@ -365,7 +366,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/16.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/15.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Поддержка менеджера 24/7
                 </div>
@@ -373,7 +374,7 @@
             </div>
             <div class="swiperSlide card">
               <div class="card__inside">
-                <div class="card__icon"><img src="./assets/img/01/12.png" alt="" /></div>
+                <div class="card__icon"><img  loading="lazy" src="./assets/img/01/16.png" alt="" /></div>
                 <div class="card__text txt25x29">
                   Реферальная программа для дополнительного заработка 
                 </div>
@@ -384,14 +385,14 @@
         <div class="swiper-pagination swiper-pagination3"></div>
       </div>
       <div class="profite__profit">
-        <img src="./assets/img/elements/text/profit.png" alt="">
+        <img  loading="lazy" src="./assets/img/elements/text/profit.png" alt="">
       </div>
     </section>
     <section class="payments">
       <div class="bgElemDark"></div>
       <div class="bgElemDark2"></div>
       <div class="typeTop">
-        <div class="typeTop__num"><img src="./assets/img/elements/text/05.png" alt=""></div>
+        <div class="typeTop__num"><img  loading="lazy" src="./assets/img/elements/text/05.png" alt=""></div>
         <div class="typeTop__cnt">
           <h3 class="typeTop__title txt40x50">
             Выплаты на комфортные платежные системы
@@ -400,17 +401,17 @@
       </div>
       <div class="payments__wrapper wrapper">
         <div class="payments__item">
-          <div class="payments__icon"><img src="./assets/img/payment/1.png" alt=""></div>
+          <div class="payments__icon"><img  loading="lazy" src="./assets/img/payment/1.png" alt=""></div>
           <p class="payments__name">Банковские карты
           </p>
         </div>
         <div class="payments__item">
-          <div class="payments__icon"><img src="./assets/img/payment/2.png" alt=""></div>
+          <div class="payments__icon"><img  loading="lazy" src="./assets/img/payment/2.png" alt=""></div>
           <p class="payments__name">Банковские карты
           </p>
         </div>
         <div class="payments__item">
-          <div class="payments__icon"><img src="./assets/img/payment/3.png" alt=""></div>
+          <div class="payments__icon"><img  loading="lazy" src="./assets/img/payment/3.png" alt=""></div>
           <p class="payments__name">Банковские карты
           </p>
         </div>
@@ -438,7 +439,7 @@
           <div class="socialBtn__text">Telegram</div>
         </div>
         <div class="logo footer__logo">
-          <img src="./assets/img/elements/logoFooter.png" alt="CASH SWAG" />
+          <img  loading="lazy" src="./assets/img/elements/logoFooter.png" alt="CASH SWAG" />
         </div>
         <ul class="footer__list">
           <li class="footer__item"><a href="./fqa.html" class="footer__link">FAQ</a></li>
