--- a/test/index.html
+++ b/test/index.html
@@ -407,12 +407,15 @@
         </div>
         <div class="payments__item">
           <div class="payments__icon"><img  loading="lazy" src="./assets/img/payment/2.png" alt=""></div>
-          <p class="payments__name">Банковские карты
+          <p class="payments__name">BTC
+
           </p>
         </div>
         <div class="payments__item">
           <div class="payments__icon"><img  loading="lazy" src="./assets/img/payment/3.png" alt=""></div>
-          <p class="payments__name">Банковские карты
+          <p class="payments__name">USDT
+
+
           </p>
         </div>
       </div>
