--- a/test/fqa.html
+++ b/test/fqa.html
@@ -79,6 +79,7 @@
     </header>
     <!-- Main -->
     <section class="textSect">
+      <div class="bgElemDark"></div>
       <div class="wrapper textSect__wrapper">
         <h4 class="txt30x35">Почему я должен стать вашим партнером?</h4>
         <p class="txt25x29">
@@ -106,7 +107,9 @@
           криптокошелек.
         </p>
         <h4 class="txt30x35">Как связаться с личным менеджером?</h4>
-        Написать ему в Telegram. Контакт указан в твоем личном кабинете в правом верхнем углу.
+        <p class="txt25x29">
+          Написать ему в Telegram. Контакт указан в твоем личном кабинете в правом верхнем углу.
+        </p>
         <h4 class="txt30x35">Сколько я могу заработать на реферальной программе?</h4>
         <p class="txt25x29">
           За каждого приведенного по реферальной ссылке вебмастера мы платим 5% от суммы его
