--- a/test/policy.html
+++ b/test/policy.html
@@ -79,6 +79,7 @@
     </header>
     <!-- Main -->
     <section class="textSect">
+      <div class="bgElemDark"></div>
       <p class="wrapper textSect__wrapper txt25x29">
         1. Отправкой заявки Пользователь дает Администрации Сайта согласие на обработку своих
         персональных данных.<br /><br />
