remuve old forder and update test

--- a/test/fqa.html
+++ b/test/fqa.html
@@ -39,6 +39,9 @@
             <button class="header__navBtn">Стать партнером</button>
           </li>
           <li class="header__navItem">
+            <a href="./policy.html" class="header__navBtn">Privacy policy</a>
+          </li>
+          <li class="header__navItem">
             <a href="#" class="socialBtn socialBtn--dark">
               <div class="socialBtn__icon">
                 <svg
@@ -142,6 +145,9 @@
         </div>
         <ul class="footer__list">
           <li class="footer__item"><a href="./fqa.html" class="footer__link">FAQ</a></li>
+          <li class="footer__item">
+            <a href="./policy.html" class="footer__link">Privacy policy</a>
+          </li>
           <li class="footer__item"><a href="#" class="footer__link">Связаться</a></li>
           <li class="footer__item"><a href="#" class="footer__link">Стать партнером</a></li>
         </ul>
