--- a/test/index.html
+++ b/test/index.html
@@ -612,6 +612,7 @@
         </button>
         <p class="popup__resTitle">Благодарим 
           зарегистрацию</p>
+        <p class="popup__resTitle">Наш менеджер свяжется с вами в ближайшее время</p>
         <div class="iconBig iconBig--green"><svg width="62" height="46" viewBox="0 0 62 46" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M59.616 11.2677L27.5445 43.3369C25.1696 45.7123 21.3171 45.7123 18.9399 43.3369L2.38441 26.7802C0.00858158 24.4049 0.00858158 20.5519 2.38441 18.1761C4.76069 15.7998 8.6129 15.7998 10.9881 18.1752L23.2435 30.4307L51.0109 2.66313C53.3872 0.286847 57.2397 0.288647 59.6151 2.66313C61.9905 5.03896 61.9905 8.89057 59.616 11.2677Z" fill="white"/>
           </svg>
