--- a/test/index.html
+++ b/test/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
 
     <title>CashSwag</title>
-    <link rel="icon" type="image/x-icon"  href="./assets/img/favicon/logo.ico">
-    <!-- Иконка для сайта
-	<link rel="icon" type="image/png" sizes="48x48" href="./assets/img/favicon/icon-48.png">
-	<link rel="icon" type="image/png" sizes="144x144" href="./assets/img/favicon/icon-144.png">
-	<link rel="icon" type="image/png" sizes="256x256" href="./assets/img/favicon/icon-256.png">  -->
+    <link rel="icon" type="image/x-icon"  href="./assets/img/favicon/favicon.ico">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./assets/img/favicon/android-chrome-512x512"> 
 
     <meta name="description" content="Выводимое описании при выводе в поисковике вашего сайта" />
 
