--- a/test/index.html
+++ b/test/index.html
@@ -613,12 +613,23 @@
         </button>
         <p class="popup__resTitle">Благодарим 
           зарегистрацию</p>
-        <p class="popup__resTitle">Наш менеджер свяжется с вами в ближайшее время</p>
-        <div class="iconBig iconBig--green"><svg width="62" height="46" viewBox="0 0 62 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <p class="txt25x29 cGry">Наш менеджер свяжется с вами в ближайшее время</p>
+        <div class="iconBig iconBig--green">
+          <svg width="62" height="46" viewBox="0 0 62 46" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M59.616 11.2677L27.5445 43.3369C25.1696 45.7123 21.3171 45.7123 18.9399 43.3369L2.38441 26.7802C0.00858158 24.4049 0.00858158 20.5519 2.38441 18.1761C4.76069 15.7998 8.6129 15.7998 10.9881 18.1752L23.2435 30.4307L51.0109 2.66313C53.3872 0.286847 57.2397 0.288647 59.6151 2.66313C61.9905 5.03896 61.9905 8.89057 59.616 11.2677Z" fill="white"/>
           </svg>
-          </div>
-        <div class="buttonCenter"><button class="button button--black" data-modal-btn-close><span>Продолжить</span></button></div>
+        </div>
+          <p class="txt25x29 cGry">или напишите нашему менеджеру самостоятельно</p>
+          
+          <a href="#" class="socialBtn socialBtn--dark">
+            <div class="socialBtn__icon">
+              <svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M22.5 0C10.0743 0 0 10.0743 0 22.5C0 34.9257 10.0743 45 22.5 45C34.9257 45 45 34.9257 45 22.5C45 10.0743 34.9257 0 22.5 0ZM33.5516 15.4141L29.858 32.8139C29.5859 34.0476 28.851 34.3474 27.8256 33.7663L22.2009 29.6228L19.4896 32.2363C19.2274 32.5736 18.8199 32.7898 18.365 32.7898C18.3614 32.7898 18.3593 32.7898 18.3557 32.7898L18.7554 27.0638L29.1806 17.6478C29.6306 17.2481 29.0792 17.0213 28.4811 17.421L15.6019 25.5324L10.0517 23.7997C8.85189 23.4191 8.81787 22.5999 10.3046 22.011L31.9911 13.6524C32.9995 13.2846 33.8776 13.8926 33.5509 15.4169L33.5516 15.4141Z" fill="white"></path>
+              </svg>
+            </div>
+            <div class="socialBtn__text">Telegram</div>
+          </a>
+        <!-- <div class="buttonCenter"><button class="button button--black" data-modal-btn-close><span>Продолжить</span></button></div> -->
       </div>
       <div class="popup__block popup__block--result" data-modal-window="error">
         <button class="popup__close" data-modal-btn-close>
