--- a/test/index.html
+++ b/test/index.html
@@ -40,6 +40,11 @@
         <span></span>
       </div>
     </div>
+    <div class="loader active">
+      <div class="loader__center">
+        <span></span><span></span>
+      </div>
+    </div>
     <!-- Header -->
     <header class="header">
       <div class="header__wrapper wrapper">
@@ -456,7 +461,7 @@
         </ul>
       </div>
     </footer>
-
+    
     
     <!-- Pop Up -->
     <div class="popup" data-modal-wrapper>
